# EEG-CDAs-Landing

./: .gitignore  main.py  pyproject.toml
eeg/: eeg-waves.js  index.html  main.js  styles.css  template.html
src/: manage.py
src/apps/sites/: views.py
src/eeg_site/: asgi.py  settings.py  urls.py  wsgi.py
src/static/css/: style.css
src/static/js/: main.js
src/templates/: base.html  index copy.html  index.html  service.html
src/templates/sections/: benefit_hospital.html  benefit_patient.html  solution.html
